# agent-cowork

./: AGENTS.md  COMPREHENSIVE_CODE_REVIEW.md  Makefile  README.md  README_ZH.md  agents_sdk.md  electron-builder.json  index.html  package-lock.json  package.json  test-runner.mjs  types.d.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
.tldr/cache/: call_graph.json
cody/: .env.example  .gitignore  pyproject.toml
cody/src/cody/: __init__.py  auth.py  config.py  main.py
cody/src/cody/claude/: __init__.py  runner.py  title_generator.py
cody/src/cody/sessions/: __init__.py  models.py  service.py  store.py
cody/src/cody/websocket/: __init__.py  events.py  handler.py  manager.py
cody/tests/: __init__.py  conftest.py  test_claude_runner.py  test_sessions.py  test_websocket.py
coverage/.tmp/: coverage-0.json  coverage-1.json  coverage-2.json  coverage-3.json
docs/: code-review-report.md  feature-1-prompt-injection-detection.md  feature-2-session-templates.md  feature-3-audit-logging.md  feature-4-session-search.md  final-acceptance-report.md  implementation-plan.md
src/electron/: api-tester.ts  ipc-handlers.ts  logger.ts  main.ts  pathResolver.ts  preload.cts  test.ts  types.ts  util.ts
src/electron/libs/: claude-settings.ts  orchestrator-agent.ts  runner.test.ts  runner.ts  session-store.ts  settings-manager.test.ts  settings-manager.ts  unified-commands.test.ts  unified-commands.ts  unified-task-runner.test.ts  unified-task-runner.ts  util.ts
src/ui/: App.tsx  electron.d.ts  main.tsx  types.ts
src/ui/components/: EventCard.tsx  (+16 more)
types/: index.d.ts
(+29 files in other folders)
